elasticsearch as service

--- a/Frontend/appsettings.json
+++ b/Frontend/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ElasticSettings": {
+        "baseUrl": "https://localhost:9200/",
+        "defaultIndex": "ahcdb"
+    },
   "AllowedHosts": "*"
 }
