--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.1.1" />
     <PackageReference Include="Elasticsearch.Net" Version="7.17.5" />
+    <PackageReference Include="NEST" Version="7.17.5" />
   </ItemGroup>
 
 </Project>
