migration from elastic to sql

--- a/Frontend/appsettings.json
+++ b/Frontend/appsettings.json
@@ -5,9 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ElasticSettings": {
-        "baseUrl": "https://localhost:9200/",
-        "defaultIndex": "ahcdb"
+    "ConnectionStrings": {
+        "DataContext": "Server=(localdb)\\mssqllocaldb;Database=AHCDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
-  "AllowedHosts": "*"
-}
+    "AllowedHosts": "*"
+    }
