--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -13,7 +13,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.PowerShell.Commands.Diagnostics" Version="7.3.4" />
+    <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.3.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.7" />
+    <PackageReference Include="Microsoft.WSMan.Management" Version="7.3.4" />
   </ItemGroup>
 
 </Project>
