--- a/ADDC/ADDC.csproj
+++ b/ADDC/ADDC.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.PowerShell.Commands.Diagnostics" Version="7.3.9" />
     <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.3.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Net.Http.WinHttpHandler" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
