--- a/ADDC/Properties/launchSettings.json
+++ b/ADDC/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "ADDC": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7095;http://localhost:5218",
       "environmentVariables": {
