--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectorAddress": "192.168.64.164:7093"
 }
