--- a/ADDC/Properties/launchSettings.json
+++ b/ADDC/Properties/launchSettings.json
@@ -17,7 +17,8 @@
       "applicationUrl": "https://localhost:7095;http://localhost:5218",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "AHCAdminGroupName": "Администраторы AHC"
     },
     "IIS Express": {
       "commandName": "IISExpress",
