--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # Ignore all .venv directories
-/.venv/
-**/.venv/
-Elastic/DBC/.venv/
+# /.venv/
+# **/.venv/
+# Elastic/DBC/.venv/
 # Ignore all __pycache__ directories
 __pycache__/
 /__pycache__/
