--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,4 @@ Elastic/elasticsearch-8.1.0/lib/modules
 /Elastic/elasticsearch-8.1.0
 Frontend/*.sqlite3
 Elastic/DBC/.venv/pyvenv.cfg
+/Frontend/static/media/employee_avatars/*
