--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,9 @@ Elastic/elasticsearch-8.1.0/*
 /elasticsearch-8.14.1/
 Frontend/hello/__pycache__/
 Frontend/db.sqlite3
-Frontend\hello\static\media\employee_avatars\*
-/.venv/
+Frontend/hello/static/media/employee_avatars/
+Elastic/DBC/.venv/
+Frontend/.venv/
 **/.venv/
 Elastic/DBC/.venv/
 Elastic/DBC/.venv/*
