--- a/DBC/appsettings.json
+++ b/DBC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Port=5432;Database=ahc;Username=admin;Password=83XkkHeD1fe18qPuqLvy"
+  }
 }
