--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -6,5 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-  "connectorPort": "7093"
+  "connectorPort": "7095",
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:7095", 
+        "Certificate": {
+          "Path": "C:\\Certs\\ahc.local.pfx",
+          "Password": "1"
+        }
+      }
+    }
+  }
 }
