--- a/DBC/appsettings.json
+++ b/DBC/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Postgres": "Host=localhost;Port=5432;Database=ahc;Username=admin;Password=83XkkHeD1fe18qPuqLvy"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:7080",
+        "Certificate": {
+          "Path": "C:\\Certs\\ahc.local.pfx",
+          "Password": "1"
+        }
+      }
+    }
   }
 }
