--- a/Backend/Properties/launchSettings.json
+++ b/Backend/Properties/launchSettings.json
@@ -21,8 +21,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7267;http://localhost:5134",
+      "applicationUrl": "https://localhost:7095",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
