--- a/ADDC/appsettings.json
+++ b/ADDC/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:7093",
+        "Certificate": {
+          "Path": "C:\\Certs\\dc-1.pfx",
+          "Password": "1"
+        }
+      }
+    }
+  }
 }
