--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -6,14 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "connectorPort": "7095",
+  "connectorPort": "7093",
   "Kestrel": {
     "Endpoints": {
       "Https": {
         "Url": "https://*:7095", 
         "Certificate": {
-          "Path": "C:\\Certs\\ahc.local.pfx",
-          "Password": "1"
+          "Path": "C:\\Certs\\cert.pfx",
+          "Password": "1234"
         }
       }
     }
