--- a/ADDC/appsettings.json
+++ b/ADDC/appsettings.json
@@ -11,8 +11,8 @@
       "Https": {
         "Url": "https://*:7093",
         "Certificate": {
-          "Path": "C:\\Certs\\dc-1.pfx",
-          "Password": "1"
+          "Path": "C:\\Certs\\cert.pfx",
+          "Password": "1234"
         }
       }
     }
