Фикс пустых выводов
Фикс реакции на "ненормальные данные" и вывод инфы о том, что нихера нет и ваще пошоль в жопа

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ Elastic/elasticsearch-8.1.0/*
 /elasticsearch-8.14.1/
 Frontend/hello/__pycache__/
 Frontend/db.sqlite3
-Frontend/hello/static/media/employee_avatars/
+Frontend/hello/static/media/employee_avatars/*
 Elastic/DBC/.venv/
 Frontend/.venv/
 **/.venv/
