--- a/ADDC/appsettings.Development.json
+++ b/ADDC/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "maxPowershell7Sessions": 10,
+  "maxPowershell51Sessions": 5
 }
